--- a/src/less/app.less
+++ b/src/less/app.less
@@ -6,4 +6,5 @@
 @import "bower_components/OwlCarousel/owl-carousel/owl.carousel.css";
 @import "bower_components/OwlCarousel/owl-carousel/owl.theme.css";
 @import "override.less";
+@import "navbar.less";
 @import "index.less";
