--- a/src/less/common.less
+++ b/src/less/common.less
@@ -97,8 +97,14 @@
 		padding-left: 40px;
 		padding-right: 40px;
 	}
+	&.semi-left-80 {
+		padding-left: 80px;
+	}
 	.semi-wide-40 {
 		width: 40px;
+	}
+	.semi-wide-80 {
+		width: 80px;
 	}
 	.semi-fixed-left {
 		display: block;	
