--- a/src/less/icon.less
+++ b/src/less/icon.less
@@ -41,6 +41,18 @@
         background-size: 100%;
         background-image: url("../images/edit.png")
     }
+    &.kk-translate {
+        background-size: 76%;
+        background-image: url("../images/translate.png")
+    }
+    &.kk-location {
+        background-size: 76%;
+        background-image: url("../images/location.png")
+    }
+    &.kk-bag {
+        background-size: 76%;
+        background-image: url("../images/bag.png")
+    }
     &.kk-check {
         position: relative;
         top: -1px;
