--- a/src/less/index.less
+++ b/src/less/index.less
@@ -153,3 +153,15 @@
         border-left: 1px solid @brand-warning;
     }
 }
+// margin section
+.task-section {
+    display: block;
+    margin: 8px;
+    background-color: white;
+    box-shadow: 0 2px 5px @gray-light;
+    -webkit-box-shadow: 0 2px 5px @gray-light;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    overflow: hidden;
+    color: @gray;
+}
