--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -37,7 +37,7 @@
 <!-- signin section -->
 <div class="scrollable" ng-show="sidebar.current=='signin'">
     <div class="scrollable-content">
-        <div ng-click="prev()" ng-show="sidebar.last != ''" class="section text-primary" style="position:absolute;">返回</div>
+        <div ng-click="prev()" ng-show="sidebar.last != ''" class="section text-primary" style="position:absolute;"><i class="fa fa-chevron-left"></i></div>
         <div class="text-center">
             <img ng-src="../images/logo_signin.png" alt="">
         </div>
@@ -59,7 +59,7 @@
 <!-- signup section -->
 <div class="scrollable" ng-show="sidebar.current=='signup'">
     <div class="scrollable-content">
-        <div ng-click="prev()" ng-show="sidebar.last != ''" class="section text-primary" style="position:absolute;">返回</div>
+        <div ng-click="prev()" ng-show="sidebar.last != ''" class="section text-primary" style="position:absolute;"><i class="fa fa-chevron-left"></i></div>
         <div class="text-center">
             <img ng-src="../images/logo_signin.png" alt="">
         </div>
@@ -91,7 +91,7 @@
 <!-- signup email section -->
 <div class="scrollable" ng-show="sidebar.current=='signup_email'">
     <div class="scrollable-content">
-        <div ng-click="prev()" ng-show="sidebar.last != ''" class="section text-primary" style="position:absolute;">返回</div>
+        <div ng-click="prev()" ng-show="sidebar.last != ''" class="section text-primary" style="position:absolute;"><i class="fa fa-chevron-left"></i></div>
         <div class="text-center">
             <img ng-src="../images/logo_signin.png" alt="">
         </div>
