--- a/src/templates/tasks.html
+++ b/src/templates/tasks.html
@@ -7,7 +7,15 @@
     </div>
 </div>
 <div class="scrollable">
-	<div class="scrollable-content">
-		任务清单		
-	</div>
+    <div class="scrollable-header">
+        <div class="btn-group justified">
+            <label class="btn rectangle" ng-class="{'text-primary':tab.category=='release','bg-gray-lighter':tab.category != 'release'}">
+                <input type="radio" class="hide" ng-model="tab.category" name="category" value="release">热门国家</label>
+            <label class="btn rectangle" ng-class="{'text-primary':tab.category =='accept','bg-gray-lighter':tab.category !='accept'}">
+                <input type="radio" class="hide" ng-model="tab.category" name="category" value="accept">其他国家</label>
+        </div>
+    </div>
+    <div class="scrollable-content">
+        任务清单
+    </div>
 </div>
