--- a/src/less/icon.less
+++ b/src/less/icon.less
@@ -59,6 +59,14 @@
         background-size: 80%;
         background-image: url("../images/check.png")
     }
+    &.kk-checked {
+        background-size: 80%;
+        background-image: url("../images/checked_1.png")
+    }
+    &.kk-checked.active {
+        background-size: 80%;
+        background-image: url("../images/checked.png")
+    }
     &.kk-weibo {
         background-size: 100%;
         background-image: url("../images/weibo.png")
@@ -70,6 +78,10 @@
     &.kk-facebook {
         background-size: 100%;
         background-image: url("../images/facebook.png")
+    }
+    &.kk-calendar {
+        background-size: 100%;
+        background-image: url("../images/clock.png")
     }
 }
 
