--- a/src/less/common.less
+++ b/src/less/common.less
@@ -97,6 +97,12 @@
 		padding-left: 40px;
 		padding-right: 40px;
 	}
+	&.semi-left-40 {
+		padding-left: 40px;
+	}
+	&.semi-left-60 {
+		padding-left: 60px;
+	}
 	&.semi-left-80 {
 		padding-left: 80px;
 	}
@@ -110,6 +116,12 @@
 		display: block;	
 		position: absolute;
 		left: 0;
+		top: 0;
+	}
+	.semi-fixed-right {
+		display: block;	
+		position: absolute;
+		right: 0;
 		top: 0;
 	}
 	.error {
@@ -145,5 +157,5 @@
 	left: 0;
 	right: 0;
 	opacity: 0.8;
-	z-index: 100;
+	z-index: 1000;
 }
