--- a/src/templates/location.html
+++ b/src/templates/location.html
@@ -1,18 +1,17 @@
 <div class="filter-cover" ng-click="reset_filter()"></div>
 <div class="location" style="top:{{offset_top}}">
-    <div class="btn-group justified">
-        <label class="btn rectangle" ng-class="{'text-primary':filter.country=='hot','bg-gray-lighter':filter.country != 'hot'}"><input type="radio" class="hide" ng-model="filter.country" name="country" value="hot">热门国家</label>
-        <label class="btn rectangle" ng-class="{'text-primary':filter.country =='other','bg-gray-lighter':filter.country !='other'}"><input type="radio" class="hide" ng-model="filter.country" name="country" value="other">其他国家</label>
-    </div>
-    <div class="list-group">
-        <a class="list-group-item">
-            <span class="list-group-item-text">中国</span>
-        </a>
-        <a class="list-group-item">
-            <span class="list-group-item-text">日本</span>
-        </a>
-        <a class="list-group-item">
-            <span class="list-group-item-text">澳大利亚</span>
-        </a>
+    <div class="country">
+        <div ng-repeat="country in countrys">
+            <div class="country-header">
+                {{country.name}}
+            </div>
+            <div class="section section-condensed">
+                <div class="row">
+                    <label class="col-xs-4 btn btn-default rectangle" ng-class="{'btn-primary':choosen.city.name == city }" ng-repeat="city in country.city">
+                        <input type="radio" class="hidden" ng-model="choosen.city" ng-value="{'name':city,'country':country.name}">{{city}}
+                    </label>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
