--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -30,9 +30,9 @@
                 <label class="btn">
                     <input type="radio" name="filter" class="hide" ng-model="filter.name" value="location">地点<i class="kk kk-icon" ng-class="{'kk-check':choosen.city.name != ''}"></i></label>
                 <label class="btn">
-                    <input type="radio" name="filter" class="hide" ng-model="filter.name" value="price">价格<i class="kk kk-icon" ng-class="{'kk-check':choosen.price.name != ''}"></i></label>
+                    <input type="radio" name="filter" class="hide" ng-model="filter.name" value="price">价格<i class="kk kk-icon" ng-class="{'kk-check':choosen.price.range != ''}"></i></label>
                 <label class="btn">
-                    <input type="radio" name="filter" class="hide" ng-model="filter.name" value="category">类型<i class="kk kk-icon" ng-class="{'kk-check':choosen.category.name != ''}"></i></label>
+                    <input type="radio" name="filter" class="hide" ng-model="filter.name" value="category">类型<i class="kk kk-icon" ng-class="{'kk-check':choosen.category != ''}"></i></label>
             </div>
         </div>
     </div>
