--- a/src/templates/category.html
+++ b/src/templates/category.html
@@ -1,14 +1,9 @@
 <div class="filter-cover" ng-click="reset_filter()"></div>
 <div class="category" style="top:{{offset_top}}">
     <div class="list-group">
-        <a class="list-group-item">
-            <span class="list-group-item-text">中国</span>
-        </a>
-        <a class="list-group-item">
-            <span class="list-group-item-text">日本</span>
-        </a>
-        <a class="list-group-item list-group-item-warning">
-            <span class="list-group-item-text">澳大利亚</span>
-        </a>
+        <label class="list-group-item" ng-repeat="category in categories" ng-class="{'list-group-item-warning':category == choosen.category}">
+            <input type="radio" class="hidden" ng-model="choosen.category" ng-value="category">
+            {{category}}
+        </label>
     </div>
 </div>
