--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -68,7 +68,66 @@
                 </div>
             </div>
         </a>
-
+        <a ng-href="#/tasks/task_id" class="task-section">
+            <div class="section text-ellipsis">
+                <img src="../images/avatar.png" width="20px" alt=""> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga quae modi quam, quod repellendus dolorem excepturi et, quos pariatur qui atque possimus! Quam, veniam, deserunt esse magnam adipisci repellat eos!
+            </div>
+            <div class="section bg-gray-lighter">
+                <div class="row text-center">
+                    <div class="col-xs-4 section-wide text-ellipsis">
+                        <i class="kk kk-icon kk-translate" style="position:relative;top:-3px"></i>
+                        中文/日文
+                    </div>
+                    <div class="col-xs-4 section-wide text-ellipsis">
+                        <i class="kk kk-icon kk-location" style="position:relative;top:-3px"></i>
+                        日本，东京
+                    </div>
+                    <div class="col-xs-4 section-wide text-ellipsis">
+                        <i class="kk kk-icon kk-bag" style="position:relative;top:-3px"></i>
+                        商务
+                    </div>
+                </div>
+                <div class="section section-wide bg-gray-lighter task_cost text-ellipsis">
+                    JPY 7000/天 或1000/小时(约CNY 370天 或52/小时)
+                </div>
+                <div class="task_day section-wide bg-gray-lighter text-ellipsis">
+                    6月23日7:00-6月27日 18:00
+                </div>
+                <div class="task_detail section-wide bg-gray-lighter text-ellipsis">
+                    详细要求：Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure sed sapiente omnis, dicta at. Dolore labore voluptas nam maxime atque, architecto. Nisi ab atque molestias modi fuga accusantium officiis facilis.
+                </div>
+            </div>
+        </a>
+        <a ng-href="#/tasks/task_id" class="task-section">
+            <div class="section text-ellipsis">
+                <img src="../images/avatar.png" width="20px" alt=""> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga quae modi quam, quod repellendus dolorem excepturi et, quos pariatur qui atque possimus! Quam, veniam, deserunt esse magnam adipisci repellat eos!
+            </div>
+            <div class="section bg-gray-lighter">
+                <div class="row text-center">
+                    <div class="col-xs-4 section-wide text-ellipsis">
+                        <i class="kk kk-icon kk-translate" style="position:relative;top:-3px"></i>
+                        中文/日文
+                    </div>
+                    <div class="col-xs-4 section-wide text-ellipsis">
+                        <i class="kk kk-icon kk-location" style="position:relative;top:-3px"></i>
+                        日本，东京
+                    </div>
+                    <div class="col-xs-4 section-wide text-ellipsis">
+                        <i class="kk kk-icon kk-bag" style="position:relative;top:-3px"></i>
+                        商务
+                    </div>
+                </div>
+                <div class="section section-wide bg-gray-lighter task_cost text-ellipsis">
+                    JPY 7000/天 或1000/小时(约CNY 370天 或52/小时)
+                </div>
+                <div class="task_day section-wide bg-gray-lighter text-ellipsis">
+                    6月23日7:00-6月27日 18:00
+                </div>
+                <div class="task_detail section-wide bg-gray-lighter text-ellipsis">
+                    详细要求：Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure sed sapiente omnis, dicta at. Dolore labore voluptas nam maxime atque, architecto. Nisi ab atque molestias modi fuga accusantium officiis facilis.
+                </div>
+            </div>
+        </a>
         <!-- hide content -->
         <div ng-include="'language.html'" ng-if="filter.name == 'language'"></div>
         <div ng-include="'location.html'" ng-if="filter.name == 'location'"></div>
