--- a/src/templates/release_task.html
+++ b/src/templates/release_task.html
@@ -261,7 +261,7 @@
                 </div>
                 <div class="section bg-transparent">
                     <button type="button" class="btn btn-default pull-left" ui-set="{step:2}">上一步</button>
-                    <button type="button" class="btn btn-warning pull-right" ui-set="{step:3}">确认提交</button>
+                    <button type="button" class="btn btn-warning pull-right" ng-click="ajaxTask()">确认提交</button>
                 </div>
             </div>
         </form>
