--- a/src/less/common.less
+++ b/src/less/common.less
@@ -56,9 +56,6 @@
 	white-space: nowrap;
 }
 // ----------------------------bg   color---------------------------- //
-.bg-white {
-	background-color: white;
-}
 .bg-danger {
 	background-color: @brand-danger;
 }
@@ -73,6 +70,9 @@
 }
 .bg-transparent {
 	background: none;
+}
+.bg-white {
+	background-color: white;
 }
 // ----------------------------layout   ---------------------------- //
 .clearfixed {
@@ -105,6 +105,9 @@
 	}
 	&.semi-left-80 {
 		padding-left: 80px;
+	}
+	&.semi-right-80 {
+		padding-right: 80px;
 	}
 	.semi-wide-40 {
 		width: 40px;
