--- a/src/less/icon.less
+++ b/src/less/icon.less
@@ -17,6 +17,10 @@
         width: 30px;
         height: 30px;
     }
+    &.kk-40 {
+        width: 40px;
+        height: 40px;
+    }
     &.kk-50 {
         width: 50px;
         height: 50px;
@@ -82,6 +86,22 @@
     &.kk-calendar {
         background-size: 100%;
         background-image: url("../images/clock.png")
+    }
+    &.kk-authen-1 {
+        background-size: 100%;
+        background-image: url("../images/IDCard.png")
+    }
+    &.kk-authen-2 {
+        background-size: 100%;
+        background-image: url("../images/language.png")
+    }
+    &.kk-authen-3 {
+        background-size: 100%;
+        background-image: url("../images/authenication.png")
+    }
+    &.kk-authen-4 {
+        background-size: 100%;
+        background-image: url("../images/diamond.png")
     }
 }
 
