--- a/src/less/index.less
+++ b/src/less/index.less
@@ -212,3 +212,84 @@
         border-right: 0;
     }
 }
+.cover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: fade(black, 50%);
+    z-index: 1000;
+    .cover-box {
+        position: absolute;
+        top: 50%;
+        left: 0;
+        right: 0;
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: -60px;
+        padding: 15px;
+        background-color: white;
+        border-radius: 5px;
+        -webkit-border-radius: 5px;
+
+    }
+    .cover-close {
+        display: inline-block;
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 30px;
+        height: 30px;
+        background-image: url("../images/close.png");
+        background-size: 100%;
+        background-position: center center;
+        background-repeat: no-repeat;
+    }
+}
+.translator {
+    position: relative;
+    display: block;
+    .translator-intro {
+        display: block;
+        position: absolute;
+        top: 8px;
+        right: 0;
+        width: 50%;
+        padding: 15px 10px;
+        color: white;
+        text-align: right;
+        background-color: @gray-light;
+        background-color: fade(black, 50%);
+    }
+}
+.translator-cover {
+    position: relative;
+    margin-bottom: 50px;
+    .translator-info {
+        position: absolute;
+        bottom: 0;
+        padding:8px;
+        color: white;
+    }
+    .left {
+        left: 0;
+    }
+    .right {
+        right: 0;
+        text-align: right;
+    }
+    .translator-avatar {
+        position: absolute;
+        bottom: -50px;
+        left: 50%;
+        margin-left: -50px;
+        width: 100px;
+        height: 100px;
+        border: 3px solid white;
+        border-radius: 100%;
+        -webkit-border-radius: 100%;
+        overflow: hidden;
+    }
+}
