--- a/src/templates/translator.html
+++ b/src/templates/translator.html
@@ -60,13 +60,22 @@
                     </div>
                 </div>
                 <div class="list-group-item">
-                    <span class="text-small">评价标签</span>
-                    <div class="row">
-                        <div class="col-xs-4 btn btn-default rectangle">
-                            大叔
+                    <p class="text-small">评价标签</p>
+                    <div class="row grid-gutter">
+                        <div class="col-xs-4">
+                            <span class="btn btn-default rectangle">评价标签</span>
                         </div>
-                        <div class="col-xs-4 btn btn-default rectangle">
-                            大叔
+                        <div class="col-xs-4">
+                            <span class="btn btn-default rectangle">评价标签</span>
+                        </div>
+                        <div class="col-xs-4">
+                            <span class="btn btn-default rectangle">评价标签</span>
+                        </div>
+                        <div class="col-xs-4">
+                            <span class="btn btn-default rectangle">评价标签</span>
+                        </div>
+                        <div class="col-xs-4">
+                            <span class="btn btn-default rectangle">评价标签</span>
                         </div>
                     </div>
                     <div class="text-right">
@@ -117,16 +126,71 @@
                 </div>
                 <div class="list-group-item">
                     <span class="text-small">3条评价</span>
-                    <div class="list-group">
-                        <div class="list-group-item clearfix">
-                            <img ng-src="../images/avatar.png" alt="" class="pull-right" width="80px;">
-                            <div class="pull-left" style="margin-right:83px;margin-top:-80px;">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate dolorum sapiente corporis cumque quod impedit esse cupiditate expedita laudantium doloremque aperiam amet iure accusamus dignissimos perferendis dolor, unde quisquam sed!
-                                <p>2015年5月28日</p>
-                            </div>
+                    <div class="media">
+                        <div class="media-body">
+                            <h4 class="media-heading">start</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint quos quisquam porro saepe magnam eligendi, voluptas quidem! Tempora, suscipit perferendis eligendi laboriosam doloremque voluptates delectus id reprehenderit laborum, inventore non.</p>
+                            <span>2015年5月28日</span>
                             <div class="row">
-                                <img class="col-xs-3" ng-src="../images/avatar.png">
+                                <div class="col-xs-3">
+                                    <span class="thumbnail">
+                                        <img ng-src="../images/avatar.png">
+                                    </span>
+                                </div>
+                                <div class="col-xs-3">
+                                    <span class="thumbnail">
+                                        <img ng-src="../images/avatar.png">
+                                    </span>
+                                </div>
+                                <div class="col-xs-3">
+                                    <span class="thumbnail">
+                                        <img ng-src="../images/avatar.png">
+                                    </span>
+                                </div>
+                                <div class="col-xs-3">
+                                    <span class="thumbnail">
+                                        <img ng-src="../images/avatar.png">
+                                    </span>
+                                </div>
                             </div>
+                        </div>
+                        <div class="media-right">
+                            <img class="media-object" src="../images/avatar.png" >
+                            <p>dribehance</p>
+                        </div>
+                    </div>
+                    <div class="kk-line kk-horizon bg-gray-lighter"></div>
+                    <div class="media">
+                        <div class="media-body">
+                            <h4 class="media-heading">start</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint quos quisquam porro saepe magnam eligendi, voluptas quidem! Tempora, suscipit perferendis eligendi laboriosam doloremque voluptates delectus id reprehenderit laborum, inventore non.</p>
+                            <span>2015年5月28日</span>
+                            <div class="row">
+                                <div class="col-xs-3">
+                                    <span class="thumbnail">
+                                        <img ng-src="../images/avatar.png">
+                                    </span>
+                                </div>
+                                <div class="col-xs-3">
+                                    <span class="thumbnail">
+                                        <img ng-src="../images/avatar.png">
+                                    </span>
+                                </div>
+                                <div class="col-xs-3">
+                                    <span class="thumbnail">
+                                        <img ng-src="../images/avatar.png">
+                                    </span>
+                                </div>
+                                <div class="col-xs-3">
+                                    <span class="thumbnail">
+                                        <img ng-src="../images/avatar.png">
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="media-right">
+                            <img class="media-object" src="../images/avatar.png" >
+                            <p>dribehance</p>
                         </div>
                     </div>
                 </div>
