--- a/src/templates/translator.html
+++ b/src/templates/translator.html
@@ -198,8 +198,16 @@
         </div>
     </div>
     <div class="scrollable-footer">
-        <div class="btn-group">
-            <span></span>
+        <div class="btn-group justified">
+            <span class="btn btn-success rectangle">
+                将我分享给朋友
+            </span>
+            <span class="btn btn-danger rectangle">
+                发送申请
+            </span>
+            <span class="btn bg-gray text-white rectangle">
+                收藏此人
+            </span>
         </div>
     </div>
 </div>
