--- a/src/less/icon.less
+++ b/src/less/icon.less
@@ -103,6 +103,15 @@
         background-size: 100%;
         background-image: url("../images/diamond.png")
     }
+    &.kk-female {
+        background-size: 100%;
+        background-image: url("../images/woman.png")
+    }
+    &.kk-male {
+        background-size: 100%;
+        background-image: url("../images/man.png")
+    }
+    
 }
 
 .btn-navbar {
