--- a/src/less/index.less
+++ b/src/less/index.less
@@ -293,3 +293,27 @@
         overflow: hidden;
     }
 }
+.recommand {
+    position: relative;
+    margin: 10px 15px 50px 15px;
+    background-color: white;
+    .recommand-header {
+        padding: 8px;
+        background-color: @gray-lighter;
+    }
+    .recommand-body {
+        padding: 8px;
+    }
+    .recommand-avatar {
+        position: absolute;
+        bottom: -50px;
+        left: 50%;
+        margin-left: -50px;
+        width: 100px;
+        height: 100px;
+        border-radius: 100%;
+        -webkit-border-radius: 100%;
+        overflow: hidden;
+        border: 3px solid white;
+    }
+}
